# vfs.smb2

./: .gitignore  CMakeLists.txt  FindSMB.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
depends/windows/smb2/: flags.txt  smb2.txt
depends/windowsstore/smb2/: smb2.txt
src/: SMBConnection.cpp  SMBConnection.h  SMBFile.cpp  SMBFile.h  SMBSession.cpp  SMBSession.h
src/netbios/: netbios_defs.h  netbios_ns.cpp  netbios_query.cpp  netbios_utils.cpp  queue.h
vfs.smb2/: addon.xml.in
